k8s/overlays/prod/ingress-patch.yml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: notes-ingress

spec:
  rules:
  - host: notes.local
